apps/burger/burger-dp.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: burger-builder
  namespace: balhau-dev
  labels:
    version: 0.0.6
    app: burger-builder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burger-builder
  template:
    metadata:
      labels:
        app: burger-builder
    spec:
      containers:
      - name: burger-builder
        image: 10.108.252.69:5000/balhau/burger-builder:arm32v7-0.0.6
        resources:
          requests:
            memory: "128Mi"
            cpu: "800m"
            
        ports:
        - containerPort: 5000
          name: registry
          protocol: TCP
